force-app/main/default/objects/STARRating_Settings__mdt/STARRating_Settings__mdt.object-meta.xml
<CustomObject>
    <description>Use this metadata type to store period of time to Go Live and Publish status for SCR Records</description>
    <label>STARRating Settings</label>
    <pluralLabel>STARRating Settings</pluralLabel>
</CustomObject>