force-app/main/default/objects/STARRating_Settings__mdt/fields/Days_after_Date_Decision_Ends_1__c.field-meta.xml
<CustomField>
    <fullName>Days_after_Date_Decision_Ends_1__c</fullName>
    <label>Days after Date Decision Ends 1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>