force-app/main/default/objects/STARRating_Settings__mdt/fields/Days_In_the_Past__c.field-meta.xml
<CustomField>
    <fullName>Days_In_the_Past__c</fullName>
    <label>Days In the Past</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>