force-app/main/default/objects/STARRating_Settings__mdt/fields/Days_to_Go_Live__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Go_Live__c</fullName>
    <defaultValue>7</defaultValue>
    <description>Stores the number days from rating calculation to Go Live.</description>
    <label>Days to Go Live</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>