force-app/main/default/objects/STARRating_Settings__mdt/fields/Days_to_Publish_Date__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Publish_Date__c</fullName>
    <defaultValue>14</defaultValue>
    <description>Stores the number of days to Publish Date</description>
    <label>Days to Publish Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>