force-app/main/default/objects/STARRating_Settings__mdt/fields/PP_Change_Live__c.field-meta.xml
<CustomField>
    <fullName>PP_Change_Live__c</fullName>
    <defaultValue>true</defaultValue>
    <label>PP Change Live</label>
    <type>Checkbox</type>
</CustomField>